[project]
name = "repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin Bernstorff", email = "martinbernstorff@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
repro = "repro.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
